# lib/controllers/superBowlController.js
@@ -44,7 +44,7 @@ module.exports = {
     SuperBowl.find({}).then(superbowl => {
       const superbowlMapped = superbowl.map(superbowl => {
         const superbowlObject = {
-          halftimePerformer: superbowl.halftimePerformer
+          halftimePerformers: superbowl.halftimePerformer
         };
         return superbowlObject;
       });
@@ -54,7 +54,7 @@ module.exports = {
   showHalftimeId: (req, res) => {
     SuperBowl.findOne({ super_bowl: req.params.bowlNumber }).then(superbowl => {
       const superbowlObject = {
-        halftimePerformer: superbowl.halftimePerformer
+        halftimePerformers: superbowl.halftimePerformer
       };
       res.json(superbowlObject);
     });
